@@ -10,7 +10,7 @@ jobs:
       matrix:
         python: ['3.8', '3.9', '3.10']
         django: ['3.2', '4.0']
-        wagtail: ['2.16', '3.0', '4.0']
+        wagtail: ['2.16', '3.0', '4.0', '4.1', '4.2']
         include:
           - python: '3.7'
             django: '3.2'
@@ -33,6 +33,24 @@ jobs:
           - python: '3.10'
             django: '4.1'
             wagtail: '4.0'
+          - python: '3.8'
+            django: '4.1'
+            wagtail: '4.1'
+          - python: '3.9'
+            django: '4.1'
+            wagtail: '4.1'
+          - python: '3.10'
+            django: '4.1'
+            wagtail: '4.1'
+          - python: '3.8'
+            django: '4.1'
+            wagtail: '4.2'
+          - python: '3.9'
+            django: '4.1'
+            wagtail: '4.2'
+          - python: '3.10'
+            django: '4.1'
+            wagtail: '4.2'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python }}
