@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    python{3.7,3.8,3.9,3.10}-django{3.2}-wagtail{2.15,2.16,3.0,4.0}
-    python{3.8,3.9,3.10}-django{4.0}-wagtail{2.16,3.0,4.0}
-    python{3.8,3.9,3.10}-django{4.1}-wagtail{4.0}
+    python{3.7,3.8,3.9,3.10}-django{3.2}-wagtail{2.15,2.16,3.0,4.0,4.1,4.2}
+    python{3.8,3.9,3.10}-django{4.0}-wagtail{2.16,3.0,4.0,4.1,4.2}
+    python{3.8,3.9,3.10}-django{4.1}-wagtail{4.0,4.1,4.2}
 
 [testenv]
 commands = python runtests.py
@@ -21,3 +21,5 @@ deps =
     wagtail2.16: wagtail>=2.16,<2.17
     wagtail3.0: wagtail>=3.0,<3.1
     wagtail4.0: wagtail>=4.0,<4.1
+    wagtail4.1: wagtail>=4.1,<4.2   # LTS
+    wagtail4.2: wagtail>=4.2rc1,<4.3
